--- a/default-theme.html
+++ b/default-theme.html
@@ -36,9 +36,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --light-primary-color: var(--paper-indigo-100);
     --dark-primary-color: var(--paper-indigo-700);
 
-    --accent-color: var(--paper-pink-a200);
-    --light-accent-color: var(--paper-pink-a100);
-    --dark-accent-color: var(--paper-pink-a400);
+    --accent-color: var(--paper-indigo-a200);
+    --light-accent-color: var(--paper-indigo-a100);
+    --dark-accent-color: var(--paper-indigo-a400);
+
+    /*
+     * Secondary and accent colors. Also see color.html for more colors.
+     */
+    --secondary-color: var(--paper-green-500);
+    --light-secondary-color: var(--paper-green-100);
+    --dark-secondary-color: var(--paper-green-700);
+
+    --accent-secondary-color: var(--paper-green-a200);
+    --light-accent-secondary-color: var(--paper-green-a100);
+    --dark-accent-secondary-color: var(--paper-green-a400);
 
 
     /*
