--- a/poly-theme.html
+++ b/poly-theme.html
@@ -1,6 +1,3 @@
-<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
-<link rel="import" href="../iron-flex-layout/classes/iron-flex-layout.html">
-
 <!--
 The `<poly-theme>` component provides simple ways to use Material Design CSS styles
 in your application. The following imports are available:
@@ -20,5 +17,5 @@ available in each ones, rather than the aggregated `poly-theme.html` as a whole.
 <link rel="import" href="../paper-styles/color.html">
 <link rel="import" href="../paper-styles/shadow.html">
 <link rel="import" href="../paper-styles/typography.html">
-<link rel="import" href="default-theme.html">
+<link rel="import" href="styles/default-theme.html">
 
