--- a/classes/buttons.html
+++ b/classes/buttons.html
@@ -1,3 +1,5 @@
+<link rel="import" href="../styles/buttons.html">
+
 <!--
 `buttons`
 App color themes
@@ -13,169 +15,143 @@ App color themes
   Buttons
   =============================*/
   /*noinspection ALL*/
-  .btn-rounded {
-    border-radius: 200px;
-    padding-left: 16px;
-    padding-right: 16px;
+  html /deep/ .btn-rounded {
+    @apply(--btn-rounded);
   }
 
   /* primary-color ==============================================================*/
   /*noinspection ALL*/
-  .btn--primary-color:not([disabled]) {
-    color: var(--primary-color);
+  html /deep/ .btn--primary-color:not([disabled]) {
+    @apply(--btn--primary-color);
   }
   /*noinspection ALL*/
-  .btn-fill--primary-color:not([disabled]) {
-    background-color: var(--primary-color);
-    color: white;
-  }
-
-  /*noinspection ALL*/
-  .btn--light-primary-color:not([disabled]) {
-    color: var(--light-primary-color);
-  }
-  /*noinspection ALL*/
-  .btn-fill--light-primary-color:not([disabled]) {
-    background-color: var(--light-primary-color);
+  html /deep/ .btn-fill--primary-color:not([disabled]) {
+    @apply(--btn-fill--primary-color);
   }
 
   /*noinspection ALL*/
-  .btn--dark-primary-color:not([disabled]) {
-    color: var(--dark-primary-color);
+  html /deep/ .btn--light-primary-color:not([disabled]) {
+    @apply(--btn--light-primary-color);
   }
   /*noinspection ALL*/
-  .btn-fill--dark-primary-color:not([disabled]) {
-    background-color: var(--dark-primary-color);
-    color: white;
+  html /deep/ .btn-fill--light-primary-color:not([disabled]) {
+    @apply(--btn-fill--light-primary-color);
+  }
+
+  /*noinspection ALL*/
+  html /deep/ .btn--dark-primary-color:not([disabled]) {
+    @apply(--btn--dark-primary-color);
+  }
+  /*noinspection ALL*/
+  html /deep/ .btn-fill--dark-primary-color:not([disabled]) {
+    @apply(--btn-fill--dark-primary-color);
   }
 
 
   /*noinspection ALL*/
-  .btn--accent-color:not([disabled]) {
-    color: var(--accent-color);
+  html /deep/ .btn--accent-color:not([disabled]) {
+    @apply(--btn--accent-color);
   }
   /*noinspection ALL*/
-  .btn-fill--accent-color:not([disabled]) {
-    background-color: var(--accent-color);
-    color: white;
-  }
-
-  /*noinspection ALL*/
-  .btn--light-accent-color:not([disabled]) {
-    color: var(--light-accent-color);
-  }
-  /*noinspection ALL*/
-  .btn-fill--light-accent-color:not([disabled]) {
-    background-color: var(--light-accent-color);
-    color: white;
+  html /deep/ .btn-fill--accent-color:not([disabled]) {
+    @apply(--btn-fill--accent-color);
   }
 
   /*noinspection ALL*/
-  .btn--dark-accent-color:not([disabled]) {
-    color: var(--dark-accent-color);
+  html /deep/ .btn--light-accent-color:not([disabled]) {
+    @apply(--btn--light-accent-color);
   }
   /*noinspection ALL*/
-  .btn-fill--dark-accent-color:not([disabled]) {
-    background-color: var(--dark-accent-color);
-    color: white;
+  html /deep/ .btn-fill--light-accent-color:not([disabled]) {
+    @apply(--btn-fill--light-accent-color);
+  }
+
+  /*noinspection ALL*/
+  html /deep/ .btn--dark-accent-color:not([disabled]) {
+    @apply(--btn--dark-accent-color);
+  }
+  /*noinspection ALL*/
+  html /deep/ .btn-fill--dark-accent-color:not([disabled]) {
+    @apply(--btn-fill--dark-accent-color);
   }
 
 
   /* secondary-color ==============================================================*/
   /*noinspection ALL*/
-  .btn--secondary-color:not([disabled]) {
-    color: var(--secondary-color);
+  html /deep/ .btn--secondary-color:not([disabled]) {
+    @apply(--btn--secondary-color);
   }
   /*noinspection ALL*/
-  .btn-fill--secondary-color:not([disabled]) {
-    background-color: var(--secondary-color);
-    color: white;
-  }
-
-  /*noinspection ALL*/
-  .btn--light-secondary-color:not([disabled]) {
-    color: var(--light-secondary-color);
-  }
-  /*noinspection ALL*/
-  .btn-fill--light-secondary-color:not([disabled]) {
-    background-color: var(--light-secondary-color);
+  html /deep/ .btn-fill--secondary-color:not([disabled]) {
+    @apply(--btn-fill--secondary-color);
   }
 
   /*noinspection ALL*/
-  .btn--dark-secondary-color:not([disabled]) {
-    color: var(--dark-secondary-color);
+  html /deep/ .btn--light-secondary-color:not([disabled]) {
+    @apply(--btn--light-secondary-color);
   }
   /*noinspection ALL*/
-  .btn-fill--dark-secondary-color:not([disabled]) {
-    background-color: var(--dark-secondary-color);
-    color: white;
+  html /deep/ .btn-fill--light-secondary-color:not([disabled]) {
+    @apply(--btn-fill--light-secondary-color);
+  }
+
+  /*noinspection ALL*/
+  html /deep/ .btn--dark-secondary-color:not([disabled]) {
+    @apply(--btn--dark-secondary-color);
+  }
+  /*noinspection ALL*/
+  html /deep/ .btn-fill--dark-secondary-color:not([disabled]) {
+    @apply(--btn-fill--dark-secondary-color);
   }
 
 
   /*noinspection ALL*/
-  .btn--accent-secondary-color:not([disabled]) {
-    color: var(--accent-secondary-color);
+  html /deep/ .btn--accent-secondary-color:not([disabled]) {
+    @apply(--btn--accent-secondary-color);
   }
   /*noinspection ALL*/
-  .btn-fill--accent-secondary-color:not([disabled]) {
-    background-color: var(--accent-secondary-color);
-    color: white;
-  }
-
-  /*noinspection ALL*/
-  .btn--light-accent-secondary-color:not([disabled]) {
-    color: var(--light-accent-secondary-color);
-  }
-  /*noinspection ALL*/
-  .btn-fill--light-accent-secondary-color:not([disabled]) {
-    background-color: var(--light-accent-secondary-color);
-    color: white;
+  html /deep/ .btn-fill--accent-secondary-color:not([disabled]) {
+    @apply(--btn-fill--accent-secondary-color);
   }
 
   /*noinspection ALL*/
-  .btn--dark-accent-secondary-color:not([disabled]) {
-    color: var(--dark-accent-secondary-color);
+  html /deep/ .btn--light-accent-secondary-color:not([disabled]) {
+    @apply(--btn--light-accent-secondary-color);
   }
   /*noinspection ALL*/
-  .btn-fill--dark-accent-secondary-color:not([disabled]) {
-    background-color: var(--dark-accent-secondary-color);
-    color: white;
+  html /deep/ .btn-fill--light-accent-secondary-color:not([disabled]) {
+    @apply(--btn-fill--light-accent-secondary-color);
+  }
+
+  /*noinspection ALL*/
+  html /deep/ .btn--dark-accent-secondary-color:not([disabled]) {
+    @apply(--btn--dark-accent-secondary-color);
+  }
+  /*noinspection ALL*/
+  html /deep/ .btn-fill--dark-accent-secondary-color:not([disabled]) {
+    @apply(--btn-fill--dark-accent-secondary-color);
   }
 
 
 
   /*=====================================*/
   /*noinspection ALL*/
-  .btn-light:not([disabled]) {
-    color: var(--paper-grey-600);
+  html /deep/ .btn-light:not([disabled]) {
+    @apply(--btn-light);
   }
 
   /*noinspection ALL*/
-  .btn-light-white:not([disabled]) {
-    color: #ffffff;
+  html /deep/ .btn-light-white:not([disabled]) {
+    @apply(--btn-light-white);
   }
 
   /*noinspection ALL*/
-  .btn--light--primary:not([disabled]) {
-    color: var(--accent-color);
-    background-color: white;
+  html /deep/ .btn--mid--dark:not([disabled]) {
+    @apply(--btn--mid--dark);
   }
 
   /*noinspection ALL*/
-  .btn--accent-color--alt:not([disabled]) {
-    color: var(--paper-grey-600);
-    background: var(--app-accent-color-light);
-  }
-
-  /*noinspection ALL*/
-  .btn--mid--dark:not([disabled]) {
-    background-color: var(--paper-grey-600);
-    color: white;
-  }
-
-  /*noinspection ALL*/
-  .btn--dark:not([disabled]) {
-    background-color: var(--paper-grey-900);
-    color: white;
+  html /deep/ .btn--dark:not([disabled]) {
+    @apply(--btn--dark);
   }
 </style>
