--- a/classes/typography-light.html
+++ b/classes/typography-light.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../default-theme.html">
+<link rel="import" href="../styles/default-theme.html">
 
 <!--
 `typography-light`
@@ -15,72 +15,72 @@ Typography colors and sizes applied to paper classes.
   */
 
   /*noinspection ALL*/
-  .light.paper-font-display4 {
+  html /deep/ .light.paper-font-display4 {
     color: var(--light-theme-font-display4);
   }
 
   /*noinspection ALL*/
-  .light.paper-font-display3 {
+  html /deep/ .light.paper-font-display3 {
     color: var(--light-theme-font-display3);
   }
 
   /*noinspection ALL*/
-  .light.paper-font-display2 {
+  html /deep/ .light.paper-font-display2 {
     color: var(--light-theme-font-display2);
   }
 
   /*noinspection ALL*/
-  .light.paper-font-display1 {
+  html /deep/ .light.paper-font-display1 {
     color: var(--light-theme-font-display1);
   }
 
   /*noinspection ALL*/
-  .light.paper-font-headline {
+  html /deep/ .light.paper-font-headline {
     color: var(--light-theme-font-headline);
   }
 
   /*noinspection ALL*/
-  .light.paper-font-title {
+  html /deep/ .light.paper-font-title {
     color: var(--light-theme-font-title);
   }
 
   /*noinspection ALL*/
-  .light.paper-font-subhead {
+  html /deep/ .light.paper-font-subhead {
     color: var(--light-theme-font-subhead);
   }
 
   /*noinspection ALL*/
-  .light.paper-font-body2 {
+  html /deep/ .light.paper-font-body2 {
     color: var(--light-theme-font-body2);
   }
 
   /*noinspection ALL*/
-  .light.paper-font-body1 {
+  html /deep/ .light.paper-font-body1 {
     color: var(--light-theme-font-body1);
   }
 
   /*noinspection ALL*/
-  .light.paper-font-caption {
+  html /deep/ .light.paper-font-caption {
     color: var(--light-theme-font-caption);
   }
 
   /*noinspection ALL*/
-  .light.paper-font-menu {
+  html /deep/ .light.paper-font-menu {
     color: var(--light-theme-font-menu);
   }
 
   /*noinspection ALL*/
-  .light.paper-font-button {
+  html /deep/ .light.paper-font-button {
     color: var(--light-theme-font-button);
   }
 
   /*noinspection ALL*/
-  .light.paper-font-code2 {
+  html /deep/ .light.paper-font-code2 {
     color: var(--light-theme-font-code2);
   }
 
   /*noinspection ALL*/
-  .light.paper-font-code1 {
+  html /deep/ .light.paper-font-code1 {
     color: var(--light-theme-font-code1);
   }
 </style>
