theme font responsive deep

--- a/classes/buttons.html
+++ b/classes/buttons.html
@@ -7,7 +7,8 @@ App color themes
 @demo demo/index.html
 -->
 <style is="custom-style">
-  paper-button {
+  /*noinspection ALL*/
+  html /deep/ paper-button {
     text-decoration: none;
   }
 
