change repository name

--- a/skin-styles.html
+++ b/skin-styles.html
@@ -1,15 +1,15 @@
 <!--
-The `<poly-theme>` component provides simple ways to use Material Design CSS styles
+The `<skin-styles>` component provides simple ways to use Material Design CSS styles
 in your application. The following imports are available:
 
-1. [color.html](https://github.com/PolymerElements/poly-theme/blob/master/color.html):
+1. [color.html](https://github.com/PolymerElements/skin-styles/blob/master/color.html):
 a complete list of the colors defined in the Material Design [palette](https://www.google.com/design/spec/style/color.html)
 
 We recommend importing each of these individual files, and using the style mixins
-available in each ones, rather than the aggregated `poly-theme.html` as a whole.
+available in each ones, rather than the aggregated `skin-styles.html` as a whole.
 
 @group Paper Elements
-@pseudoElement poly-theme
+@pseudoElement skin-styles
 @demo demo/index.html
 -->
 
