--- a/demo/index.html
+++ b/demo/index.html
@@ -16,12 +16,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
-  <title>poly-theme demo</title>
+  <title>skin-styles demo</title>
 
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
   <link rel="import" href="../../paper-styles/demo-pages.html">
-  <link rel="import" href="../poly-theme.html">
+  <link rel="import" href="../skin-styles.html">
   <link rel="import" href="../classes.html">
   <link rel="import" href="../../paper-button/paper-button.html">
 
@@ -103,7 +103,7 @@
 </style>
 
 <body unresolved>
-<h1>poly-theme</h1>
+<h1>skin-styles</h1>
 
 <section is="buttons">
   <h2>buttons.html</h2>
