--- a/skin-styles.html
+++ b/skin-styles.html
@@ -13,9 +13,6 @@ available in each ones, rather than the aggregated `skin-styles.html` as a whole
 @demo demo/index.html
 -->
 
-
-<link rel="import" href="../paper-styles/color.html">
-<link rel="import" href="../paper-styles/shadow.html">
-<link rel="import" href="../paper-styles/typography.html">
-<link rel="import" href="styles/default-theme.html">
+<link rel="import" href="styles.html">
+<link rel="import" href="classes.html">
 
