remove deprecated /deep/

--- a/classes/buttons.html
+++ b/classes/buttons.html
@@ -8,7 +8,7 @@ App color themes
 -->
 <style is="custom-style">
   /*noinspection ALL*/
-  html /deep/ paper-button {
+  paper-button {
     text-decoration: none;
   }
 
@@ -16,120 +16,120 @@ App color themes
   Buttons
   =============================*/
   /*noinspection ALL*/
-  html /deep/ .btn-rounded {
+  .btn-rounded {
     @apply(--btn-rounded);
   }
 
   /* primary-color ==============================================================*/
   /*noinspection ALL*/
-  html /deep/ .btn--primary-color:not([disabled]) {
+  .btn--primary-color:not([disabled]) {
     @apply(--btn--primary-color);
   }
   /*noinspection ALL*/
-  html /deep/ .btn-fill--primary-color:not([disabled]) {
+  .btn-fill--primary-color:not([disabled]) {
     @apply(--btn-fill--primary-color);
   }
 
   /*noinspection ALL*/
-  html /deep/ .btn--light-primary-color:not([disabled]) {
+  .btn--light-primary-color:not([disabled]) {
     @apply(--btn--light-primary-color);
   }
   /*noinspection ALL*/
-  html /deep/ .btn-fill--light-primary-color:not([disabled]) {
+  .btn-fill--light-primary-color:not([disabled]) {
     @apply(--btn-fill--light-primary-color);
   }
 
   /*noinspection ALL*/
-  html /deep/ .btn--dark-primary-color:not([disabled]) {
+  .btn--dark-primary-color:not([disabled]) {
     @apply(--btn--dark-primary-color);
   }
   /*noinspection ALL*/
-  html /deep/ .btn-fill--dark-primary-color:not([disabled]) {
+  .btn-fill--dark-primary-color:not([disabled]) {
     @apply(--btn-fill--dark-primary-color);
   }
 
 
   /*noinspection ALL*/
-  html /deep/ .btn--accent-color:not([disabled]) {
+  .btn--accent-color:not([disabled]) {
     @apply(--btn--accent-color);
   }
   /*noinspection ALL*/
-  html /deep/ .btn-fill--accent-color:not([disabled]) {
+  .btn-fill--accent-color:not([disabled]) {
     @apply(--btn-fill--accent-color);
   }
 
   /*noinspection ALL*/
-  html /deep/ .btn--light-accent-color:not([disabled]) {
+  .btn--light-accent-color:not([disabled]) {
     @apply(--btn--light-accent-color);
   }
   /*noinspection ALL*/
-  html /deep/ .btn-fill--light-accent-color:not([disabled]) {
+  .btn-fill--light-accent-color:not([disabled]) {
     @apply(--btn-fill--light-accent-color);
   }
 
   /*noinspection ALL*/
-  html /deep/ .btn--dark-accent-color:not([disabled]) {
+  .btn--dark-accent-color:not([disabled]) {
     @apply(--btn--dark-accent-color);
   }
   /*noinspection ALL*/
-  html /deep/ .btn-fill--dark-accent-color:not([disabled]) {
+  .btn-fill--dark-accent-color:not([disabled]) {
     @apply(--btn-fill--dark-accent-color);
   }
 
 
   /* secondary-color ==============================================================*/
   /*noinspection ALL*/
-  html /deep/ .btn--secondary-color:not([disabled]) {
+  .btn--secondary-color:not([disabled]) {
     @apply(--btn--secondary-color);
   }
   /*noinspection ALL*/
-  html /deep/ .btn-fill--secondary-color:not([disabled]) {
+  .btn-fill--secondary-color:not([disabled]) {
     @apply(--btn-fill--secondary-color);
   }
 
   /*noinspection ALL*/
-  html /deep/ .btn--light-secondary-color:not([disabled]) {
+  .btn--light-secondary-color:not([disabled]) {
     @apply(--btn--light-secondary-color);
   }
   /*noinspection ALL*/
-  html /deep/ .btn-fill--light-secondary-color:not([disabled]) {
+  .btn-fill--light-secondary-color:not([disabled]) {
     @apply(--btn-fill--light-secondary-color);
   }
 
   /*noinspection ALL*/
-  html /deep/ .btn--dark-secondary-color:not([disabled]) {
+  .btn--dark-secondary-color:not([disabled]) {
     @apply(--btn--dark-secondary-color);
   }
   /*noinspection ALL*/
-  html /deep/ .btn-fill--dark-secondary-color:not([disabled]) {
+  .btn-fill--dark-secondary-color:not([disabled]) {
     @apply(--btn-fill--dark-secondary-color);
   }
 
 
   /*noinspection ALL*/
-  html /deep/ .btn--accent-secondary-color:not([disabled]) {
+  .btn--accent-secondary-color:not([disabled]) {
     @apply(--btn--accent-secondary-color);
   }
   /*noinspection ALL*/
-  html /deep/ .btn-fill--accent-secondary-color:not([disabled]) {
+  .btn-fill--accent-secondary-color:not([disabled]) {
     @apply(--btn-fill--accent-secondary-color);
   }
 
   /*noinspection ALL*/
-  html /deep/ .btn--light-accent-secondary-color:not([disabled]) {
+  .btn--light-accent-secondary-color:not([disabled]) {
     @apply(--btn--light-accent-secondary-color);
   }
   /*noinspection ALL*/
-  html /deep/ .btn-fill--light-accent-secondary-color:not([disabled]) {
+  .btn-fill--light-accent-secondary-color:not([disabled]) {
     @apply(--btn-fill--light-accent-secondary-color);
   }
 
   /*noinspection ALL*/
-  html /deep/ .btn--dark-accent-secondary-color:not([disabled]) {
+  .btn--dark-accent-secondary-color:not([disabled]) {
     @apply(--btn--dark-accent-secondary-color);
   }
   /*noinspection ALL*/
-  html /deep/ .btn-fill--dark-accent-secondary-color:not([disabled]) {
+  .btn-fill--dark-accent-secondary-color:not([disabled]) {
     @apply(--btn-fill--dark-accent-secondary-color);
   }
 
@@ -137,22 +137,22 @@ App color themes
 
   /*=====================================*/
   /*noinspection ALL*/
-  html /deep/ .btn-light:not([disabled]) {
+  .btn-light:not([disabled]) {
     @apply(--btn-light);
   }
 
   /*noinspection ALL*/
-  html /deep/ .btn-light-white:not([disabled]) {
+  .btn-light-white:not([disabled]) {
     @apply(--btn-light-white);
   }
 
   /*noinspection ALL*/
-  html /deep/ .btn--mid--dark:not([disabled]) {
+  .btn--mid--dark:not([disabled]) {
     @apply(--btn--mid--dark);
   }
 
   /*noinspection ALL*/
-  html /deep/ .btn--dark:not([disabled]) {
+  .btn--dark:not([disabled]) {
     @apply(--btn--dark);
   }
 </style>
