--- a/classes/typography-dark.html
+++ b/classes/typography-dark.html
@@ -15,72 +15,72 @@ Typography colors and sizes applied to paper classes.
   */
 
   /*noinspection ALL*/
-  html /deep/ .dark.paper-font-display4 {
+  .dark.paper-font-display4 {
     color: var(--dark-theme-font-display4);
   }
 
   /*noinspection ALL*/
-  html /deep/ .dark.paper-font-display3 {
+  .dark.paper-font-display3 {
     color: var(--dark-theme-font-display3);
   }
 
   /*noinspection ALL*/
-  html /deep/ .dark.paper-font-display2 {
+  .dark.paper-font-display2 {
     color: var(--dark-theme-font-display2);
   }
 
   /*noinspection ALL*/
-  html /deep/ .dark.paper-font-display1 {
+  .dark.paper-font-display1 {
     color: var(--dark-theme-font-display1);
   }
 
   /*noinspection ALL*/
-  html /deep/ .dark.paper-font-headline {
+  .dark.paper-font-headline {
     color: var(--dark-theme-font-headline);
   }
 
   /*noinspection ALL*/
-  html /deep/ .dark.paper-font-title {
+  .dark.paper-font-title {
     color: var(--dark-theme-font-title);
   }
 
   /*noinspection ALL*/
-  html /deep/ .dark.paper-font-subhead {
+  .dark.paper-font-subhead {
     color: var(--dark-theme-font-subhead);
   }
 
   /*noinspection ALL*/
-  html /deep/ .dark.paper-font-body2 {
+  .dark.paper-font-body2 {
     color: var(--dark-theme-font-body2);
   }
 
   /*noinspection ALL*/
-  html /deep/ .dark.paper-font-body1 {
+  .dark.paper-font-body1 {
     color: var(--dark-theme-font-body1);
   }
 
   /*noinspection ALL*/
-  html /deep/ .dark.paper-font-caption {
+  .dark.paper-font-caption {
     color: var(--dark-theme-font-caption);
   }
 
   /*noinspection ALL*/
-  html /deep/ .dark.paper-font-menu {
+  .dark.paper-font-menu {
     color: var(--dark-theme-font-menu);
   }
 
   /*noinspection ALL*/
-  html /deep/ .dark.paper-font-button {
+  .dark.paper-font-button {
     color: var(--dark-theme-font-button);
   }
 
   /*noinspection ALL*/
-  html /deep/ .dark.paper-font-code2 {
+  .dark.paper-font-code2 {
     color: var(--dark-theme-font-code2);
   }
 
   /*noinspection ALL*/
-  html /deep/ .dark.paper-font-code1 {
+  .dark.paper-font-code1 {
     color: var(--dark-theme-font-code1);
   }
 </style>
