--- a/classes/typography.html
+++ b/classes/typography.html
@@ -18,23 +18,23 @@ Typography Sizes applied to paper classes.
   */
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-display4,
-  html /deep/ .paper-font-display3,
-  html /deep/ .paper-font-display2,
-  html /deep/ .paper-font-display1,
-  html /deep/ .paper-font-headline,
-  html /deep/ .paper-font-title,
-  html /deep/ .paper-font-subhead,
-  html /deep/ .paper-font-body2,
-  html /deep/ .paper-font-body1,
-  html /deep/ .paper-font-caption,
-  html /deep/ .paper-font-menu,
-  html /deep/ .paper-font-button {
+  .paper-font-display4,
+  .paper-font-display3,
+  .paper-font-display2,
+  .paper-font-display1,
+  .paper-font-headline,
+  .paper-font-title,
+  .paper-font-subhead,
+  .paper-font-body2,
+  .paper-font-body1,
+  .paper-font-caption,
+  .paper-font-menu,
+  .paper-font-button {
   }
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-code2,
-  html /deep/ .paper-font-code1 {
+  .paper-font-code2,
+  .paper-font-code1 {
   }
 
   /*
@@ -43,59 +43,59 @@ Typography Sizes applied to paper classes.
   */
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-display4 {
+  .paper-font-display4 {
   }
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-display3 {
+  .paper-font-display3 {
   }
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-display2 {
+  .paper-font-display2 {
   }
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-display1 {
+  .paper-font-display1 {
   }
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-headline {
+  .paper-font-headline {
   }
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-title {
+  .paper-font-title {
   }
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-subhead {
+  .paper-font-subhead {
   }
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-body2 {
+  .paper-font-body2 {
   }
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-body1 {
+  .paper-font-body1 {
   }
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-caption {
+  .paper-font-caption {
   }
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-menu {
+  .paper-font-menu {
   }
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-button {
+  .paper-font-button {
   }
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-code2 {
+  .paper-font-code2 {
   }
 
   /*noinspection ALL*/
-  html /deep/ .paper-font-code1 {
+  .paper-font-code1 {
   }
 
   /* ===========================
@@ -104,311 +104,311 @@ Typography Sizes applied to paper classes.
 
   @media (min-width: 0) {
     /* media-breakpoint-up-xs */
-    html /deep/ .paper-font-display4 {
+    .paper-font-display4 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display3 {
+    .paper-font-display3 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display2 {
+    .paper-font-display2 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display1 {
+    .paper-font-display1 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-headline {
+    .paper-font-headline {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-title {
+    .paper-font-title {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-subhead {
+    .paper-font-subhead {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-body2 {
+    .paper-font-body2 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-body1 {
+    .paper-font-body1 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-caption {
+    .paper-font-caption {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-menu {
+    .paper-font-menu {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-button {
+    .paper-font-button {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-code2 {
+    .paper-font-code2 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-code1 {
+    .paper-font-code1 {
     }
   }
 
   @media (min-width: 544px) {
     /* media-breakpoint-up-sm */
     /*noinspection ALL*/
-    html /deep/ .paper-font-display4 {
+    .paper-font-display4 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display3 {
+    .paper-font-display3 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display2 {
+    .paper-font-display2 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display1 {
+    .paper-font-display1 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-headline {
+    .paper-font-headline {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-title {
+    .paper-font-title {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-subhead {
+    .paper-font-subhead {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-body2 {
+    .paper-font-body2 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-body1 {
+    .paper-font-body1 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-caption {
+    .paper-font-caption {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-menu {
+    .paper-font-menu {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-button {
+    .paper-font-button {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-code2 {
+    .paper-font-code2 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-code1 {
+    .paper-font-code1 {
     }
   }
 
   @media (min-width: 768px) {
     /* media-breakpoint-up-md */
     /*noinspection ALL*/
-    html /deep/ .paper-font-display4 {
+    .paper-font-display4 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display3 {
+    .paper-font-display3 {
       font-size: 60px;
       font-weight: 500;
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display2 {
+    .paper-font-display2 {
       @apply(--paper-font-display3);
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display1 {
+    .paper-font-display1 {
       @apply(--paper-font-display2);
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-headline {
+    .paper-font-headline {
       @apply(--paper-font-display1);
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-title {
+    .paper-font-title {
       @apply(--paper-font-headline);
       font-weight: 500;
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-subhead {
+    .paper-font-subhead {
       @apply(--paper-font-title);
       font-weight: 400;
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-body1 {
+    .paper-font-body1 {
       @apply(--paper-font-subhead);
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-body2 {
+    .paper-font-body2 {
       @apply(--paper-font-subhead);
       font-weight: 500;
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-body1 {
+    .paper-font-body1 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-caption {
+    .paper-font-caption {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-menu {
+    .paper-font-menu {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-button {
+    .paper-font-button {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-code2 {
+    .paper-font-code2 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-code1 {
+    .paper-font-code1 {
     }
   }
 
   @media (min-width: 992px) {
     /* media-breakpoint-up-lg */
     /*noinspection ALL*/
-    html /deep/ .paper-font-display4 {
+    .paper-font-display4 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display3 {
+    .paper-font-display3 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display2 {
+    .paper-font-display2 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display1 {
+    .paper-font-display1 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-headline {
+    .paper-font-headline {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-title {
+    .paper-font-title {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-subhead {
+    .paper-font-subhead {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-body2 {
+    .paper-font-body2 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-body1 {
+    .paper-font-body1 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-caption {
+    .paper-font-caption {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-menu {
+    .paper-font-menu {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-button {
+    .paper-font-button {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-code2 {
+    .paper-font-code2 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-code1 {
+    .paper-font-code1 {
     }
   }
 
   @media (min-width: 1200px) {
     /* media-breakpoint-up-xl */
     /*noinspection ALL*/
-    html /deep/ .paper-font-display4 {
+    .paper-font-display4 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display3 {
+    .paper-font-display3 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display2 {
+    .paper-font-display2 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-display1 {
+    .paper-font-display1 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-headline {
+    .paper-font-headline {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-title {
+    .paper-font-title {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-subhead {
+    .paper-font-subhead {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-body2 {
+    .paper-font-body2 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-body1 {
+    .paper-font-body1 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-caption {
+    .paper-font-caption {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-menu {
+    .paper-font-menu {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-button {
+    .paper-font-button {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-code2 {
+    .paper-font-code2 {
     }
 
     /*noinspection ALL*/
-    html /deep/ .paper-font-code1 {
+    .paper-font-code1 {
     }
   }
 
