--- a/classes/typography.html
+++ b/classes/typography.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../../paper-styles/classes/typography.html">
 <link rel="import" href="../../paper-styles/typography.html">
 <link rel="import" href="typography-dark.html">
