syle classes to modules --v1

--- a/skin-styles.html
+++ b/skin-styles.html
@@ -12,7 +12,14 @@ available in each ones, rather than the aggregated `skin-styles.html` as a whole
 @pseudoElement skin-styles
 @demo demo/index.html
 -->
-
+<link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="styles.html">
 <link rel="import" href="classes.html">
 
+<dom-module id="skin-styles-classes">
+  <template>
+    <custom-style>
+      <style is="custom-style" include="skin-styles-classes"></style>
+    </custom-style>
+  </template>
+</dom-module>
