--- a/classes.html
+++ b/classes.html
@@ -8,5 +8,13 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
+<link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="classes/buttons.html">
 <link rel="import" href="classes/typography.html">
+
+<dom-module id="skin-styles-classes">
+  <template>
+    <custom-style>
+    </custom-style>
+  </template>
+</dom-module>
