--- a/styles.html
+++ b/styles.html
@@ -1,6 +1,9 @@
 <!-- skin-styles Styles -->
+<link rel="import" href="../polymer/polymer.html">
 
 <link rel="import" href="../paper-styles/color.html">
 <link rel="import" href="../paper-styles/shadow.html">
 <link rel="import" href="../paper-styles/typography.html">
 <link rel="import" href="styles/default-theme.html">
+
+
